--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin:0;
+    padding:0;
+    outline:0;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+}
+
+a:hover{
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+button:hover{
+    cursor: pointer;
+    opacity: 0.6;
+}
